# rzem-ai-hermes-plugin-xmpp

./: .gitignore  LICENSE  README.md  __init__.py  adapter.py  plugin.yaml  pyproject.toml
hermes_plugin_xmpp/: __init__.py  _compat.py  _standalone.py  adapter.py  config.py  history.py  jid_utils.py
tests/: test_adapter_offline.py  test_config.py  test_history.py  test_jid_utils.py  test_register.py
