[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-xmpp"
version = "0.1.0"
description = "XMPP gateway plugin for the Hermes Agent platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "rzem-ai" }]
keywords = ["hermes", "xmpp", "chatbot", "gateway", "slixmpp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "slixmpp>=1.8.4",
    "PyYAML>=6.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.entry-points."hermes.platforms"]
xmpp = "hermes_plugin_xmpp.adapter:register"

[project.urls]
Homepage = "https://github.com/rzem-ai/hermes-plugin-xmpp"
Repository = "https://github.com/rzem-ai/hermes-plugin-xmpp"

[tool.setuptools.packages.find]
include = ["hermes_plugin_xmpp*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
hermes_plugin_xmpp = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
